Fixes Layout issues

--- a/src/postcss/card.pcss
+++ b/src/postcss/card.pcss
@@ -2,6 +2,7 @@
     @apply border border-gray-200 shadow;
     @apply bg-white;
     @apply p-4 overflow-hidden relative;
+    @apply mb-4;
     & .is-teaser-icon {
         @apply top-2 right-2 w-14 h-14 absolute;
         @apply text-gray-200;
